# models/review.js
@@ -1,0 +1,43 @@
+'use strict';
+const {
+  Model
+} = require('sequelize');
+module.exports = (sequelize, DataTypes) => {
+  class Review extends Model {
+    /**
+     * Helper method for defining associations.
+     * This method is not a part of Sequelize lifecycle.
+     * The `models/index` file will call this method automatically.
+     */
+    static associate(models) {
+      // define association here
+    }
+  }
+  Review.init({
+    corp_member_id: {
+      type: DataTypes.INTEGER,
+      references: {
+        model: 'CorpMembers',
+        key: 'id'
+      },
+      allowNull: false
+    },
+    comment: DataTypes.TEXT,
+    star_rating: DataTypes.INTEGER,
+    ppa_id: {
+      type: DataTypes.INTEGER,
+      references: {
+        model: 'PPA',
+        key: 'id'
+      },
+      allowNull: false
+    }
+  }, {
+    sequelize,
+    modelName: 'Review',
+    tableName: 'Reviews',
+    createdAt: 'created_at',
+    updatedAt: 'updated_at',
+  });
+  return Review;
+};
